Revision history for Perl distribution PathTools.

3.23 - Wed Oct 11 12:11:25 2006

 - Yet more Win32 fixes (sigh... seems like I'm fighting a neverending
   waterbed...).  This time, fixed file_name_is_absolute() to know
   what it's doing when the path includes a volume but a relative
   path, like C:foo.txt .  This bug had impact in rel2abs() on Win32
   too.

3.22 - Mon Oct  9 21:50:52 2006

 - Fixed the t/crossplatform.t test on Win32 (and possibly other
   volume-aware platforms) now that rel2abs() always adds a drive
   letter. [Reported by several parties]

3.21 - Wed Oct  4 21:16:43 2006

 - Added a bunch of X<> tags to the File::Spec docs to help
   podindex. [Gabor Szabo]

 - On Win32, abs2rel('C:\one\two\t\foo', 't\bar') should return
   '..\foo' when the cwd is 'C:\one\two', but it wasn't noticing that
   the two relevant volumes were the same so it would return the full
   path 'C:\one\two\t\foo'.  This is fixed. [Spotted by Alexandr
   Ciornii]

 - On Win32, rel2abs() now always adds a volume (drive letter) if the
   given path doesn't have a volume (drive letter or UNC volume).
   Previously it could return a value that didn't have a volume if the
   input was a semi-absolute path like /foo/bar instead of a
   fully-absolute path like C:/foo/bar .

3.19  Tue Jul 11 22:40:26 CDT 2006

 - When abs2rel() is called with two relative paths
   (e.g. abs2rel('foo/bar/baz', 'foo/bar')) the resolution algorithm
   needlessly called cwd() (twice!) to turn both arguments into
   absolute paths.  Now it avoids the cwd() calls with a workaround,
   making a big efficiency win when abs2rel() is called
   repeatedly. [Brendan O'Dea]

 - Added a build-time dependency on ExtUtils::Install version 1.39
   when on Windows.  This is necessary because version 1.39 knows how
   to replace an in-use Cwd shared library, but previous versions
   don't. [Suggested by Adam Kennedy]

 - Fixed File::Spec::Win32->canonpath('foo/../bar'), which was